testing site headers

--- a/ARMOR_classifier.html
+++ b/ARMOR_classifier.html
@@ -1,5 +1,5 @@
 ---
-title: A.R.M.O.R - Armament Models Recognizer for civilian security
+title: ARMOR - Armament Models Recognizer for civilian security
 layout: page
 ---
 
