--- a/ARMOR_classifier.html
+++ b/ARMOR_classifier.html
@@ -1,8 +1,9 @@
 ---
-title: A.R.M.O.R - Armament Models Recognizer for civilian security
+title: A.R.M.O.R - Armament Models Recognizer for civilian security 
 layout: page
 ---
 
+<p> Welcome. Please wait a few seconds after image upload for prediction.</p>
 <input id="photo" type="file">
 <div id="results"></div>
 
