added most project files

--- a/ARMOR_classifier.html
+++ b/ARMOR_classifier.html
@@ -3,7 +3,7 @@ title: A.R.M.O.R - Armament Models Recognizer for civilian security
 layout: page
 ---
 
-<p> Welcome. Please wait a few seconds after image upload for prediction.</p>
+<p> Welcome. Please wait a few moments after image upload for prediction result. Thank you for your patience.</p>
 <input id="photo" type="file">
 <div id="results"></div>
 
